Bug 250865 - Desktop effects can not be enabled, but reason is not shown
Summary: Desktop effects can not be enabled, but reason is not shown
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 250287 268790 269766 273187 273360 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-11 12:58 UTC by Unknown
Modified: 2012-04-13 19:24 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7
Sentry Crash Report:


Attachments
Output of glxinfo (16.10 KB, text/plain)
2010-09-11 12:58 UTC, Unknown
Details
KWin command line log (1.34 KB, text/plain)
2010-09-11 22:35 UTC, Unknown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2010-09-11 12:58:59 UTC
Created attachment 51542 [details]
Output of glxinfo

Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

When open the Desktop Effects KCM to try enable the Desktop Effects, all settings are greyed out and there is an "I-icon" (info) with the following text next to it:

"Desktop effects are not available on this system due to the following technical issues:"

But there are no reasons given.

I'm using the open-source ati drivers (see attached glxinfo.txt)

Reproducible: Didn't try




OS: Linux (x86_64) release 2.6.35-20-generic
Compiler: cc
Comment 1 Unknown 2010-09-11 13:00:08 UTC
I'm using Kubuntu 10.10 (still beta) with the latest updates from today.
Comment 2 Thomas Lübking 2010-09-11 21:36:25 UTC
wihle this sounds like a UI bug, try to run "kwin --replace&" from a textshell (konsole) and watch the output for more information

If there's still no hint and esp. iff even the xrender compositing doesn't work, check (attach) your /var/log/Xorg.0.log - could be compositing support isn't activated at all by the server
Comment 3 Unknown 2010-09-11 22:34:04 UTC
Ok, I ran your command and copied the log to the file I attached.
KWin says my OpenGL library is unsafe.

But besides that, I still wonder why the UI says it will show this reason in
the UI without showing it.

Kind regards,

Hans Bakker

2010/9/11 Thomas Lübking <thomas.luebking@web.de>

> https://bugs.kde.org/show_bug.cgi?id=250865
>
>
>
>
>
> --- Comment #2 from Thomas Lübking <thomas luebking web de>  2010-09-11
> 21:36:25 ---
> wihle this sounds like a UI bug, try to run "kwin --replace&" from a
> textshell
> (konsole) and watch the output for more information
>
> If there's still no hint and esp. iff even the xrender compositing doesn't
> work, check (attach) your /var/log/Xorg.0.log - could be compositing
> support
> isn't activated at all by the server
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
Comment 4 Unknown 2010-09-11 22:35:40 UTC
Created attachment 51553 [details]
KWin command line log
Comment 5 Thomas Lübking 2010-09-11 23:37:41 UTC
as mentioned: the UI thing is obviously a bug.

the gl compositing caused a segfault your driver in the past, try to remove the OpenGLIsUnsafe key (or set it to false) in ~/.kde/share/config/kwinrc, then try "kcmshell4 kwincompositing" - prepare for an instant crash - if not, you might have gl compositing.

the xrender autofallback was removed in the last moment, therefore the debug output is wrong, you can try to activate it in the advanced tab (but some effects won't work and the performance might render it useless)
Comment 6 Christoph Feck 2010-09-12 13:23:50 UTC
*** Bug 250287 has been marked as a duplicate of this bug. ***
Comment 7 Unknown 2010-09-12 15:26:42 UTC
Ok, I will wait until KDE marks my driver as being safe.

This bug report was only to report the UI bug.

Thanks for your hints!
Comment 8 Unknown 2010-09-12 15:28:37 UTC
Maybe someone can change the report status to CONFIRMED?
Comment 9 Shlomi Fish 2010-10-11 23:40:41 UTC
This also happens on Mandriva Linux Cooker on a P4-2.4GHz (x86-32) with this card:

[card]
Card:ATI Radeon HD 2000 and later (radeon/fglrx): ATI Technologies Inc|RV630 PRO AGP [Radeon HD 2600 PRO AGP] [DISPLAY_VGA]
[/card]

Regards,

-- Shlomi Fish
Comment 10 ssd 2011-02-02 01:45:42 UTC
i have the same bug with kde 4.6 with ubuntu 10.10
the default drivers of an HD4870 
cant click the button for enabling effects, and it dosnt show me a reason.
was running effects fine under compiz if i can give you some info, just tell me what
Comment 11 Shlomi Fish 2011-02-02 10:39:56 UTC
I can no longer reproduce this bug, because I can enable desktop effects in KDE on my Pentium 4 machine with the ATI Radeon HD 2600 Pro card without any problems. It may still exist, though.
Comment 12 ssd 2011-02-02 12:31:15 UTC
what did you do to make it work?
Comment 13 Shlomi Fish 2011-02-02 13:03:58 UTC
(In reply to comment #12)
> what did you do to make it work?

I didn't do anything except maybe set LIBGL_ALWAYS_INDIRECT=1 in my environment in .Xclients (may be a different file under non-Mandriva/Fedora distributions), and it got solved after the upgrade to KDE-4.5.x on Mandriva.

Regards,

-- Shlomi Fish
Comment 14 ssd 2011-02-02 13:31:37 UTC
ok i found a solution via google:
"I also had this problem a few weeks ago with KDE 4.5... You have to edit your kwinrc (.kde4/share/config/) . You have to change these parameter to the following values:
CheckIsSafe=false
DisableChecks=true
OpenGLIsUnsafe=false
I got this information from the KWin developer. Hope this works for you!"
https://bbs.archlinux.org/viewtopic.php?id=112604
credit to Lothium
Comment 15 Dimitrios Glentadakis 2011-02-28 20:53:09 UTC
(In reply to comment #14)
> ok i found a solution via google:
> "I also had this problem a few weeks ago with KDE 4.5... You have to edit your
> kwinrc (.kde4/share/config/) . You have to change these parameter to the
> following values:
> CheckIsSafe=false
> DisableChecks=true
> OpenGLIsUnsafe=false
> I got this information from the KWin developer. Hope this works for you!"
> https://bbs.archlinux.org/viewtopic.php?id=112604
> credit to Lothium

Thanks it worked for me (i think only with the DisableChecks=true)
KDE 4.6
nvidia 8400GS
cpu 64bit
Comment 16 Martin Flöser 2011-03-19 10:19:01 UTC
*** Bug 268790 has been marked as a duplicate of this bug. ***
Comment 17 Thomas Lübking 2011-03-30 15:10:18 UTC
*** Bug 269766 has been marked as a duplicate of this bug. ***
Comment 18 Thomas Lübking 2011-05-11 20:18:45 UTC
Git commit edf36cca13de0a747e58eb20947e45cd823d705c by Thomas Lübking.
Committed on 03/04/2011 at 21:59.
Pushed by luebking into branch 'master'.

Allow the user to rearm OpenGLIsUnsafe KWIn autocrash protection

Also add a usable "doesn't work why" info and WARN! the user about clicking the rearm button.
Merge "OpenGLIsUnsafe" and "CheckIsSafe" config keys
Move the entire checking into CompositingPrefs

BUG:250865
FIXED-IN:4.7

M  +1    -2    kwin/composite.cpp     
M  +40   -1    kwin/compositingprefs.cpp     
M  +1    -0    kwin/compositingprefs.h     
M  +63   -29   kwin/kcmkwin/kwincompositing/main.cpp     
M  +2    -0    kwin/kcmkwin/kwincompositing/main.h     
M  +231  -10   kwin/kcmkwin/kwincompositing/main.ui     
M  +1    -10   kwin/kcmkwin/kwinscreenedges/main.cpp     

http://commits.kde.org/kde-workspace/edf36cca13de0a747e58eb20947e45cd823d705c
Comment 19 Thomas Lübking 2011-05-13 14:04:50 UTC
*** Bug 273187 has been marked as a duplicate of this bug. ***
Comment 20 Thomas Lübking 2011-05-16 00:48:14 UTC
*** Bug 273360 has been marked as a duplicate of this bug. ***
Comment 21 Martin Flöser 2012-04-13 19:24:09 UTC
Bulk change: move all KWin kcm bugs to product kwin